--- a/src/html/index.html.template
+++ b/src/html/index.html.template
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>智慧电力云平台</title>
+    <title>智慧电力物联平台</title>
     <%= renderTemplate("_header.html.template") %>
     <link rel="mask-icon" href="/static/icons/mask-icon.svg" color="#18bcf2" />
     <link
@@ -11,10 +11,10 @@
     <meta name="apple-itunes-app" content="app-id=1099568401" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="智慧电力云平台">
+    <meta name="apple-mobile-web-app-title" content="智慧电力物联平台">
     <meta name="msapplication-config" content="/static/icons/browserconfig.xml" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="智慧电力云平台">
+    <meta name="application-name" content="智慧电力物联平台">
     <meta name="referrer" content="same-origin" />
     <meta name="theme-color" content="{{ theme_color }}" />
     <meta name="color-scheme" content="dark light" />
